@@ -1,4 +1,4 @@
-/* $Id: proto.h,v 1.15 2001/12/10 15:04:09 ukai Exp $ */
+/* $Id: proto.h,v 1.16 2001/12/10 15:42:38 ukai Exp $ */
 /* 
  *   This file was automatically generated by version 1.7 of cextract.
  *   Manual editing not recommended.
@@ -229,7 +229,6 @@ extern void cursorHome(Buffer *buf);
 extern void arrangeCursor(Buffer *buf);
 extern void arrangeLine(Buffer *buf);
 extern void cursorXY(Buffer *buf, int x, int y);
-extern int arg_is(char *str, char *tag);
 extern int columnSkip(Buffer *buf, int offset);
 extern int columnPos(Line *line, int column);
 extern Line *lineSkip(Buffer *buf, Line *line, int offset, int last);
